--- a/Example.Rmd
+++ b/Example.Rmd
@@ -2,7 +2,7 @@
 title: "Example"
 author: "Madeleine Camargo"
 date: "2/10/2021"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
